--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
   cache_directories:
     - "~/docker"
   override:
-    - mvn -T 1C -q clean install -DskipTests=true
+    - mvn -T 1C clean install -DskipTests=true
 test:
   override:
     - docker run -d --name mysql_5_6 -e MYSQL_ROOT_PASSWORD="Techigrp@123" -p 3307:3306 mysql/mysql-server:5.7; sleep 10
