--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,5 @@ dependencies:
     - mvn -T 1C clean install -DskipTests=true
 test:
   override:
-    - docker run -d --name mysql_5_6 -e MYSQL_ROOT_PASSWORD="Techigrp@123" -p 3307:3306 mysql/mysql-server:5.7; sleep 10
-    - mysql -u root -pTechigrp@123 -h 172.17.0.2 -e "create database sample_spring_jpa;"
+    - mysql -u ubuntu -e "create database sample_spring_jpa;"
     - mvn test
