--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://172.17.0.2:3307/sample_spring_jpa
-spring.datasource.username = root
-spring.datasource.password = Techigrp@123
+spring.datasource.url = jdbc:mysql://localhost:3306/sample_spring_jpa
+spring.datasource.username = ubuntu
+spring.datasource.password =
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
