--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ dependencies:
     - mvn -T 1C clean install -DskipTests=true
 test:
   override:
-    - docker run -d -h fidelis.mysql.com --name mysql_5_6 -e MYSQL_ROOT_PASSWORD="Techigrp@123" -p 3307:3306 mysql/mysql-server:5.6; sleep 10
-    - mysql -u root -pTechigrp@123 -e -h fidelis.mysql.com "create database sample_spring_jpa;"
+    - docker network create --subnet=172.18.0.0/16 my_network
+    - docker run -d --net mynet123 --ip 172.18.0.22 --name mysql_5_6 -e MYSQL_ROOT_PASSWORD="Techigrp@123" -p 3307:3306 mysql/mysql-server:5.6; sleep 10
+    - mysql -u root -pTechigrp@123 -e -h 172.18.0.22 "create database sample_spring_jpa;"
     - mvn test
