--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/sample_spring_jpa
+spring.datasource.url = jdbc:mysql://172.18.0.22:3307/sample_spring_jpa
 spring.datasource.username = ubuntu
 spring.datasource.password =
 
