--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,6 @@ dependencies:
 test:
   override:
     - docker network create --subnet=172.18.0.0/16 my_network
-    - docker run -d --net mynet123 --ip 172.18.0.22 --name mysql_5_6 -e MYSQL_ROOT_PASSWORD="Techigrp@123" -p 3307:3306 mysql/mysql-server:5.6; sleep 10
+    - docker run -d --net my_network --ip 172.18.0.22 --name mysql_5_6 -e MYSQL_ROOT_PASSWORD="Techigrp@123" -p 3307:3306 mysql/mysql-server:5.6; sleep 10
     - mysql -u root -pTechigrp@123  -h 172.18.0.22 -e "create database sample_spring_jpa;"
     - mvn test
