--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
     - mvn -T 1C clean install -DskipTests=true
 test:
   override:
-    - docker network create --subnet=172.18.0.0/16 my_network
-    - docker run -d --net my_network --ip 172.18.0.22 --name mysql_5_6 -e MYSQL_ROOT_PASSWORD="Techigrp@123" -p 3307:3306 mysql/mysql-server:5.6; sleep 10
-    - mysql -u root -pTechigrp@123  -h 172.18.0.22 -e "create database sample_spring_jpa;"
+    - docker run -d --name mysql_5_6 -e MYSQL_ROOT_PASSWORD="Techigrp@123" -p 3307:3306 mysql/mysql-server:5.6; sleep 10
+    - export docker_container_ip=`docker ps -a | grep 'mysql_5_6' | awk '{print $1}' | xargs docker inspect -f '{{ .NetworkSettings.IPAddress }}'` && mysql -u root -pTechigrp@123 -h ${docker_container_ip} -e "create database sample_spring_jpa;"
+    - export docker_container_ip=`docker ps -a | grep 'mysql_5_6' | awk '{print $1}' | xargs docker inspect -f '{{ .NetworkSettings.IPAddress }}'` && sed -i -e "s/mysql_docker_host_ip/${docker_container_ip}/g"  src/main/resources/application.properties
     - mvn test
