--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://docker_container_ip:3307/sample_spring_jpa
+spring.datasource.url = jdbc:mysql://mysql_docker_host_ip:3307/sample_spring_jpa
 spring.datasource.username = ubuntu
 spring.datasource.password =
 
