--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://mysql_docker_host_ip:3307/sample_spring_jpa
-spring.datasource.username = ubuntu
-spring.datasource.password =
+spring.datasource.url = jdbc:mysql://localhost:3306/sample_spring_jpa
+spring.datasource.username = tester
+spring.datasource.password = tester@123
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
