--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/sample_spring_jpa
-spring.datasource.username = tester
-spring.datasource.password = tester@123
+spring.datasource.url = jdbc:mysql://localhost:3306/sakila
+spring.datasource.username = root
+spring.datasource.password = Techigrp@123
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
@@ -10,7 +10,7 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql = true
 
 # Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
@@ -20,3 +20,6 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+server.context-path=/app
+server.port=8090
